syntax = "proto3";

package envoy.config.cluster.aggregate.v3alpha;

option java_outer_classname = "ClusterProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.cluster.aggregate.v3alpha";

import "validate/validate.proto";

// [#protodoc-title: Aggregate cluster configuration]

// Configuration for the aggregate cluster. See the :ref:`architecture overview
// <arch_overview_aggregate_cluster>` for more information.
message ClusterConfig {
  // Load balancing clusters in aggregate cluster with explicit priority.
  message LbCluster {
    // Cluster name.
    string name = 1;

    // [#not-implemented-hide:] Cluster priority. If no priority is specified, the clusters will be
    // prioritized by the ordering in :ref:`list
    // <envoy_api_field_config.cluster.aggregate.v3alpha.ClusterConfig.clusters>`
    uint32 priority = 2;
  }

  // Load balancing clusters in aggregate cluster with explicit priority.
  repeated LbCluster clusters = 1 [(validate.rules).repeated = {min_items: 1}];
}
